--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "mkdocstrings-python~=1.16.6",
     "mkdocs-material~=9.6.9",
     "griffe-inherited-docstrings~=1.1.1",
+    "loguru~=0.7.3",
 ]
 readme = "docs/README.md"
 requires-python = ">= 3.12"
